# st-ecu-firmware

./: Cargo.toml  README.md  memory.x
docs/: ARCHITECTURE.md  UPDATE-LIFECYCLE.md
src/: antilag.rs  board.rs  boost.rs  boot.rs  config.rs  contract.rs  crypto.rs  dbw.rs  diagnostics.rs  engine.rs  fuel.rs  idle.rs  ignition.rs  io.rs  knock.rs  knock_ml.rs  lambda_dfsdm.rs  launch.rs  lib.rs  live_data.rs  mcu.rs  network.rs  pinmux.rs  protection.rs  protocol.rs  reset_reason.rs  rotational_idle.rs  tcu.rs  traction.rs  transport.rs  trigger.rs  trigger_model.rs  trigger_runtime.rs  vvt.rs  wideband.rs
src/hal/: common.rs  f407.rs  h743.rs  mod.rs
